--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,26 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100vh;
+  background-color: #dfdbe5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%239C92AC' fill-opacity='0.04'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.container {
+  max-width: 1250px;
+  height: auto;
+  margin: 10vh auto 0 auto;
+  display: flex;
+  width: 40vw;
+  border: 1px solid red;
+  align-items: center;
+  flex-direction: column;
+}
+
 h2 {
-  color: red;
+  color: orange;
+  font-family: "Comfortaa", cursive;
 }
